<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/load_img_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_load_img"
            android:background="@color/lime"
            style="@style/titleTextStyle"
            android:textColor="@color/white"
            android:padding="@dimen/default_margin" />
        <ImageView
            android:id="@+id/view_plant_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/trending2"
            android:scaleType="centerCrop" />
    </LinearLayout>
    <EditText
        android:id="@+id/register_plant_name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/plant_name"
        android:layout_marginTop="@dimen/item_margin"
        android:inputType="text"
        style="@style/defaultTextStyle"/>
    <EditText
        android:inputType="text"
        android:id="@+id/register_plant_description"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/plant_description"
        android:layout_marginTop="@dimen/item_margin"
        style="@style/defaultTextStyle" />
    <Spinner
        android:id="@+id/register_plant_growing"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/plant_growing" />
    <Spinner
        android:id="@+id/register_plant_watering"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/plant_watering" />
    <Button
        android:id="@+id/register_plant_confirm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:background="@color/grey"
        android:text="@string/register_plant_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginBottom="@dimen/default_margin" />
</LinearLayout>