<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_title_cardview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_plant_name"
        style="@style/titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin"
        android:text="@string/plant_name"
        app:layout_constraintBottom_toBottomOf="@+id/popup_title_cardview"
        app:layout_constraintStart_toEndOf="@+id/popup_title_cardview"
        app:layout_constraintTop_toTopOf="@+id/popup_title_cardview" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/popup_title_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popup_plant_name"
        app:layout_constraintTop_toTopOf="@+id/popup_title_cardview" />

    <TextView
        android:id="@+id/popup_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_description_title"
        app:layout_constraintStart_toStartOf="@+id/popup_title_cardview"
        app:layout_constraintTop_toBottomOf="@+id/popup_title_cardview"
        android:layout_marginTop="@dimen/default_margin"
        style="@style/titleTextStyle" />

    <TextView
        android:id="@+id/popup_description_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_description"
        app:layout_constraintStart_toStartOf="@+id/popup_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_description_title"
        style="@style/defaultTextStyle" />

    <TextView
        android:id="@+id/popup_growing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_growing_title"
        app:layout_constraintStart_toStartOf="@+id/popup_description_content"
        app:layout_constraintTop_toBottomOf="@+id/popup_description_content"
        android:layout_marginTop="@dimen/default_margin"
        style="@style/titleTextStyle" />

    <TextView
        android:id="@+id/popup_growing_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Croissance : Lente"
        app:layout_constraintStart_toStartOf="@+id/popup_growing_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_growing_title"
        style="@style/defaultTextStyle" />

    <TextView
        android:id="@+id/popup_watering_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_watering_title"
        app:layout_constraintStart_toStartOf="@+id/popup_growing_content"
        app:layout_constraintTop_toBottomOf="@+id/popup_growing_content"
        android:layout_marginTop="@dimen/default_margin"
        style="@style/titleTextStyle" />

    <TextView
        android:id="@+id/popup_watering_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Consommation : Faible"
        app:layout_constraintStart_toStartOf="@+id/popup_watering_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_watering_title"
        style="@style/defaultTextStyle" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_watering_content"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>